--- a/docs/测试设计方案.md
+++ b/docs/测试设计方案.md
@@ -1,11 +1,36 @@
 # OAuth2.1认证授权中心测试设计方案
 
+> **文档版本**: v2.0.0  
+> **创建日期**: 2024-01-20  
+> **最后更新**: 2024-01-20  
+> **文档状态**: 正式版  
+> **维护团队**: 测试团队
+
+## 文档摘要
+
+本文档详细描述了OAuth2.1认证授权中心的完整测试策略，包括测试目标、测试范围、测试环境设计、测试用例设计、自动化测试方案等。确保系统在功能性、安全性、性能和可靠性方面达到企业级标准。
+
+## 目录
+
+- [1. 测试概述](#1-测试概述)
+  - [1.1 测试目标](#11-测试目标)
+  - [1.2 测试范围](#12-测试范围)
+  - [1.3 测试策略](#13-测试策略)
+- [2. 测试环境设计](#2-测试环境设计)
+- [3. OAuth2.1协议测试](#3-oauth21协议测试)
+- [4. 安全性测试](#4-安全性测试)
+- [5. 性能测试](#5-性能测试)
+- [6. 自动化测试](#6-自动化测试)
+- [7. 测试执行计划](#7-测试执行计划)
+- [8. 质量保证](#8-质量保证)
+
 ## 1. 测试概述
 
 ### 1.1 测试目标
 
-本测试方案旨在确保OAuth2.1认证授权中心的以下核心功能：
+本测试设计方案基于**测试驱动开发(TDD)**理念，旨在确保OAuth2.1认证授权中心的功能完整性、安全性和性能表现。通过全面的测试覆盖，验证系统在各种场景下的稳定性和可靠性，特别关注内网环境下的认证授权核心功能。
 
+核心测试目标：
 - **OAuth2.1协议合规性**: 严格遵循RFC 6749、RFC 7636等标准
 - **PKCE安全增强**: 验证PKCE流程的安全性和正确性
 - **OIDC身份认证**: 确保OpenID Connect功能的完整性
@@ -15,22 +40,46 @@
 
 ### 1.2 测试范围
 
-**包含范围**:
-- OAuth2.1核心流程测试
-- PKCE增强安全测试
-- OIDC身份认证测试
-- RBAC权限系统测试
-- API接口功能测试
-- 安全性测试
-- 性能测试
-- 兼容性测试
+#### 核心功能测试
+- **OAuth2.1授权码模式**: 完整的授权码流程测试
+- **客户端认证模式**: Service-to-Service认证测试
+- **强制PKCE**: PKCE参数生成和验证测试
+- **OIDC公钥获取**: OpenID Connect公钥端点测试
+- **RBAC权限模型**: 基于角色的访问控制测试
+- **JWT令牌管理**: 令牌生成、验证、刷新测试
+
+#### 安全测试
+- **认证安全**: 密码策略、登录保护测试
+- **授权安全**: 权限验证、越权访问测试
+- **令牌安全**: JWT签名验证、令牌泄露测试
+- **PKCE安全**: Code challenge验证测试
+
+#### 性能和集成测试
+- **API性能**: 响应时间和吞吐量测试
+- **数据库性能**: 查询优化和索引效果测试
+- **第三方集成**: 客户端应用集成测试
 
 **排除范围**:
 - 第三方依赖库的内部测试
 - 基础设施层面的测试
 - 操作系统级别的安全测试
 
-### 1.3 测试策略
+### 1.3 测试驱动开发策略
+
+采用**严格的TDD方法**，确保代码质量和逻辑正确性：
+
+#### TDD循环
+1. **红(Red)**: 编写失败的测试用例，明确需求
+2. **绿(Green)**: 编写最少代码使测试通过
+3. **重构(Refactor)**: 优化代码结构，保持测试通过
+
+#### TDD原则
+- **测试先行**: 任何功能代码前必须先写测试
+- **小步迭代**: 每次只实现一个小功能
+- **持续重构**: 保持代码简洁和可维护性
+- **100%覆盖**: 确保所有业务逻辑都有测试覆盖
+
+### 1.4 测试策略
 
 ```mermaid
 graph TB
@@ -53,95 +102,654 @@ graph TB
     D2[业务流程验证] --> D
 ```
 
-## 2. 测试环境设计
+## 2. TDD测试用例设计
 
-### 2.1 测试环境架构
+### 2.1 OAuth2.1授权码模式TDD测试
 
-```mermaid
-graph TB
-    subgraph "开发环境"
-        A1[本地开发]
-        A2[单元测试]
-        A3[组件测试]
-    end
+#### 2.1.1 PKCE参数生成测试
+
+```javascript
+// 测试用例：PKCE参数生成
+describe('PKCE Parameter Generation', () => {
+  test('should generate valid code_verifier', () => {
+    // Red: 编写失败的测试
+    const codeVerifier = generateCodeVerifier();
     
-    subgraph "测试环境"
-        B1[集成测试]
-        B2[API测试]
-        B3[E2E测试]
-    end
+    expect(codeVerifier).toBeDefined();
+    expect(codeVerifier.length).toBeGreaterThanOrEqual(43);
+    expect(codeVerifier.length).toBeLessThanOrEqual(128);
+    expect(codeVerifier).toMatch(/^[A-Za-z0-9\-._~]+$/);
+  });
+  
+  test('should generate valid code_challenge from verifier', () => {
+    const codeVerifier = 'test_verifier_123';
+    const codeChallenge = generateCodeChallenge(codeVerifier);
     
-    subgraph "预生产环境"
-        C1[性能测试]
-        C2[安全测试]
-        C3[压力测试]
-    end
-    
-    subgraph "生产环境"
-        D1[监控测试]
-        D2[回归测试]
-    end
+    expect(codeChallenge).toBeDefined();
+    expect(codeChallenge).toMatch(/^[A-Za-z0-9\-_]+$/);
+    // 验证SHA256+Base64URL编码
+    const expected = base64URLEncode(sha256(codeVerifier));
+    expect(codeChallenge).toBe(expected);
+  });
+});
 ```
 
-### 2.2 测试数据管理
+#### 2.1.2 授权码流程测试
 
-**测试数据分类**:
+```javascript
+// 测试用例：完整授权码流程
+describe('Authorization Code Flow', () => {
+  test('should handle complete authorization flow with PKCE', async () => {
+    // Red: 定义完整流程测试
+    const client = await createTestClient();
+    const user = await createTestUser();
+    const codeVerifier = generateCodeVerifier();
+    const codeChallenge = generateCodeChallenge(codeVerifier);
+    
+    // 1. 授权请求
+    const authResponse = await request(app)
+      .get('/api/oauth/authorize')
+      .query({
+        response_type: 'code',
+        client_id: client.clientId,
+        redirect_uri: client.redirectUris[0],
+        scope: 'openid profile',
+        code_challenge: codeChallenge,
+        code_challenge_method: 'S256',
+        state: 'test_state'
+      })
+      .expect(302);
+    
+    // 2. 用户登录和授权（模拟）
+    const code = extractAuthorizationCode(authResponse.headers.location);
+    expect(code).toBeDefined();
+    
+    // 3. 令牌交换
+    const tokenResponse = await request(app)
+      .post('/api/oauth/token')
+      .send({
+        grant_type: 'authorization_code',
+        code: code,
+        redirect_uri: client.redirectUris[0],
+        client_id: client.clientId,
+        code_verifier: codeVerifier
+      })
+      .expect(200);
+    
+    expect(tokenResponse.body.access_token).toBeDefined();
+    expect(tokenResponse.body.refresh_token).toBeDefined();
+    expect(tokenResponse.body.id_token).toBeDefined();
+    expect(tokenResponse.body.token_type).toBe('Bearer');
+  });
+});
+```
 
-```typescript
-interface TestDataCategory {
-  users: {
-    admin: User[];
-    normalUsers: User[];
-    disabledUsers: User[];
-    testUsers: User[];
-  };
-  roles: {
-    systemRoles: Role[];
-    businessRoles: Role[];
-    testRoles: Role[];
-  };
-  permissions: {
-    menuPermissions: Permission[];
-    apiPermissions: Permission[];
-    dataPermissions: Permission[];
-  };
-  clients: {
-    publicClients: OAuthClient[];
-    confidentialClients: OAuthClient[];
-    testClients: OAuthClient[];
-  };
-  tokens: {
-    validTokens: Token[];
-    expiredTokens: Token[];
-    revokedTokens: Token[];
-  };
+### 2.2 客户端认证模式TDD测试
+
+```javascript
+// 测试用例：客户端认证模式
+describe('Client Credentials Flow', () => {
+  test('should authenticate confidential client', async () => {
+    const client = await createConfidentialClient();
+    
+    const response = await request(app)
+      .post('/api/oauth/token')
+      .auth(client.clientId, client.clientSecret)
+      .send({
+        grant_type: 'client_credentials',
+        scope: 'api:read api:write'
+      })
+      .expect(200);
+    
+    expect(response.body.access_token).toBeDefined();
+    expect(response.body.token_type).toBe('Bearer');
+    expect(response.body.scope).toContain('api:read');
+  });
+  
+  test('should reject invalid client credentials', async () => {
+    await request(app)
+      .post('/api/oauth/token')
+      .auth('invalid_client', 'invalid_secret')
+      .send({
+        grant_type: 'client_credentials',
+        scope: 'api:read'
+      })
+      .expect(401);
+  });
+});
+```
+
+### 2.3 RBAC权限模型TDD测试
+
+```javascript
+// 测试用例：RBAC权限验证
+describe('RBAC Permission System', () => {
+  test('should enforce role-based access control', async () => {
+    // 创建测试数据
+    const adminRole = await createRole('admin', ['user:read', 'user:write']);
+    const userRole = await createRole('user', ['profile:read']);
+    const adminUser = await createUserWithRole(adminRole);
+    const normalUser = await createUserWithRole(userRole);
+    
+    // 管理员应该能访问用户管理API
+    const adminToken = await generateTokenForUser(adminUser);
+    await request(app)
+      .get('/api/v2/users')
+      .auth(adminToken, { type: 'bearer' })
+      .expect(200);
+    
+    // 普通用户应该被拒绝访问
+    const userToken = await generateTokenForUser(normalUser);
+    await request(app)
+      .get('/api/v2/users')
+      .auth(userToken, { type: 'bearer' })
+      .expect(403);
+  });
+});
+```
+
+### 2.4 JWT令牌验证TDD测试
+
+```javascript
+// 测试用例：JWT令牌验证
+describe('JWT Token Validation', () => {
+  test('should validate JWT signature with public key', async () => {
+    const { privateKey, publicKey } = await generateKeyPair();
+    const payload = {
+      sub: 'user123',
+      iss: 'https://auth.company.com',
+      aud: 'test_client',
+      exp: Math.floor(Date.now() / 1000) + 3600
+    };
+    
+    const token = await signJWT(payload, privateKey);
+    const verified = await verifyJWT(token, publicKey);
+    
+    expect(verified.sub).toBe('user123');
+    expect(verified.iss).toBe('https://auth.company.com');
+  });
+  
+  test('should reject expired tokens', async () => {
+    const expiredPayload = {
+      sub: 'user123',
+      exp: Math.floor(Date.now() / 1000) - 3600 // 1小时前过期
+    };
+    
+    const token = await signJWT(expiredPayload, privateKey);
+    
+    await expect(verifyJWT(token, publicKey))
+      .rejects.toThrow('Token expired');
+  });
+});
+```
+
+## 3. 测试环境设计
+
+### 3.1 TDD开发环境
+
+```
+┌─────────────────────────────────────────────────────────────┐
+│                  TDD测试环境架构                             │
+├─────────────────────────────────────────────────────────────┤
+│  单元测试层 (Unit Tests)                                     │
+│  ┌─────────────────┐  ┌─────────────────┐                  │
+│  │   Jest/Vitest   │  │   测试数据库     │                  │
+│  │   快速反馈      │  │   SQLite内存     │                  │
+│  └─────────────────┘  └─────────────────┘                  │
+├─────────────────────────────────────────────────────────────┤
+│  集成测试层 (Integration Tests)                              │
+│  ┌─────────────────┐  ┌─────────────────┐                  │
+│  │   Supertest     │  │   Docker容器     │                  │
+│  │   API测试       │  │   PostgreSQL     │                  │
+│  └─────────────────┘  └─────────────────┘                  │
+├─────────────────────────────────────────────────────────────┤
+│  端到端测试层 (E2E Tests)                                    │
+│  ┌─────────────────┐  ┌─────────────────┐                  │
+│  │   Playwright    │  │   完整环境       │                  │
+│  │   浏览器测试     │  │   真实数据       │                  │
+│  └─────────────────┘  └─────────────────┘                  │
+└─────────────────────────────────────────────────────────────┘
+```
+
+### 3.2 测试数据管理
+
+#### 3.2.1 测试数据工厂
+
+```javascript
+// 测试数据工厂模式
+class TestDataFactory {
+  static async createTestUser(overrides = {}) {
+    return await User.create({
+      username: `test_user_${Date.now()}`,
+      passwordHash: await bcrypt.hash('password123', 10),
+      isActive: true,
+      organization: 'test_org',
+      department: 'test_dept',
+      ...overrides
+    });
+  }
+  
+  static async createTestClient(overrides = {}) {
+    return await OAuthClient.create({
+      clientId: `test_client_${Date.now()}`,
+      clientSecret: await bcrypt.hash('secret123', 10),
+      redirectUris: JSON.stringify(['http://localhost:3000/callback']),
+      grantTypes: JSON.stringify(['authorization_code', 'refresh_token']),
+      responseTypes: JSON.stringify(['code']),
+      allowedScopes: JSON.stringify(['openid', 'profile']),
+      clientType: 'CONFIDENTIAL',
+      requirePkce: true,
+      isActive: true,
+      ...overrides
+    });
+  }
 }
 ```
 
-**数据初始化策略**:
-- 使用数据库种子文件
-- 测试前自动清理和重建
-- 隔离的测试数据库
-- 数据版本控制
+#### 3.2.2 测试数据清理
 
-### 2.3 测试工具栈
+```javascript
+// 测试前后数据清理
+beforeEach(async () => {
+  // 清理测试数据
+  await cleanupTestData();
+  // 初始化基础数据
+  await seedBasicTestData();
+});
 
-**前端测试**:
-- **Jest**: JavaScript测试框架
-- **React Testing Library**: React组件测试
-- **Cypress**: E2E测试
-- **Storybook**: 组件可视化测试
+afterEach(async () => {
+  // 清理测试产生的数据
+  await cleanupTestData();
+});
+```
 
-**后端测试**:
-- **Jest**: Node.js测试框架
-- **Supertest**: HTTP接口测试
-- **Prisma Test**: 数据库测试
-- **Artillery**: 性能测试
+### 3.3 性能测试设计
 
-**安全测试**:
-- **OWASP ZAP**: 安全漏洞扫描
-- **Burp Suite**: 渗透测试
-- **Custom Scripts**: OAuth安全测试
+#### 3.3.1 OAuth2.1性能基准测试
+
+```javascript
+// K6性能测试脚本
+import http from 'k6/http';
+import { check, sleep } from 'k6';
+import { Rate } from 'k6/metrics';
+
+const errorRate = new Rate('errors');
+
+export let options = {
+  stages: [
+    { duration: '2m', target: 100 }, // 逐步增加到100用户
+    { duration: '5m', target: 100 }, // 保持100用户5分钟
+    { duration: '2m', target: 200 }, // 增加到200用户
+    { duration: '5m', target: 200 }, // 保持200用户5分钟
+    { duration: '2m', target: 0 },   // 逐步减少到0
+  ],
+  thresholds: {
+    http_req_duration: ['p(95)<500'], // 95%请求在500ms内
+    http_req_failed: ['rate<0.1'],    // 错误率小于10%
+    errors: ['rate<0.1'],
+  },
+};
+
+export default function() {
+  // 测试授权码流程性能
+  const authParams = {
+    response_type: 'code',
+    client_id: 'test_client',
+    redirect_uri: 'http://localhost:3000/callback',
+    scope: 'openid profile',
+    code_challenge: 'test_challenge',
+    code_challenge_method: 'S256',
+    state: 'test_state'
+  };
+  
+  const authResponse = http.get(`${__ENV.BASE_URL}/api/oauth/authorize`, {
+    params: authParams
+  });
+  
+  check(authResponse, {
+    'authorization endpoint status is 302': (r) => r.status === 302,
+    'authorization response time < 200ms': (r) => r.timings.duration < 200,
+  }) || errorRate.add(1);
+  
+  // 测试令牌端点性能
+  const tokenResponse = http.post(`${__ENV.BASE_URL}/api/oauth/token`, {
+    grant_type: 'client_credentials',
+    scope: 'api:read'
+  }, {
+    headers: {
+      'Authorization': `Basic ${__ENV.CLIENT_CREDENTIALS}`,
+      'Content-Type': 'application/x-www-form-urlencoded'
+    }
+  });
+  
+  check(tokenResponse, {
+    'token endpoint status is 200': (r) => r.status === 200,
+    'token response time < 300ms': (r) => r.timings.duration < 300,
+    'access token present': (r) => JSON.parse(r.body).access_token !== undefined,
+  }) || errorRate.add(1);
+  
+  sleep(1);
+}
+```
+
+#### 3.3.2 数据库性能测试
+
+```javascript
+// 数据库查询性能测试
+describe('Database Performance Tests', () => {
+  test('user authentication should complete within 100ms', async () => {
+    const startTime = Date.now();
+    
+    await authenticateUser('test_user', 'password123');
+    
+    const duration = Date.now() - startTime;
+    expect(duration).toBeLessThan(100);
+  });
+  
+  test('token validation should complete within 50ms', async () => {
+    const token = await generateTestToken();
+    const startTime = Date.now();
+    
+    await validateToken(token);
+    
+    const duration = Date.now() - startTime;
+    expect(duration).toBeLessThan(50);
+  });
+  
+  test('permission check should complete within 30ms', async () => {
+    const user = await createTestUser();
+    const startTime = Date.now();
+    
+    await checkUserPermission(user.id, 'user:read');
+    
+    const duration = Date.now() - startTime;
+    expect(duration).toBeLessThan(30);
+  });
+});
+```
+
+### 3.4 安全测试设计
+
+#### 3.4.1 OAuth2.1安全测试
+
+```javascript
+// 安全测试用例
+describe('OAuth2.1 Security Tests', () => {
+  test('should prevent PKCE downgrade attack', async () => {
+    const client = await createTestClient({ requirePkce: true });
+    
+    // 尝试不使用PKCE的授权请求
+    const response = await request(app)
+      .get('/api/oauth/authorize')
+      .query({
+        response_type: 'code',
+        client_id: client.clientId,
+        redirect_uri: client.redirectUris[0],
+        scope: 'openid profile'
+        // 故意不包含code_challenge
+      })
+      .expect(400);
+    
+    expect(response.body.error).toBe('invalid_request');
+    expect(response.body.error_description).toContain('code_challenge');
+  });
+  
+  test('should prevent authorization code replay attack', async () => {
+    const { code, codeVerifier } = await performAuthorizationFlow();
+    
+    // 第一次使用授权码
+    await request(app)
+      .post('/api/oauth/token')
+      .send({
+        grant_type: 'authorization_code',
+        code: code,
+        code_verifier: codeVerifier
+      })
+      .expect(200);
+    
+    // 尝试重复使用同一个授权码
+    await request(app)
+      .post('/api/oauth/token')
+      .send({
+        grant_type: 'authorization_code',
+        code: code,
+        code_verifier: codeVerifier
+      })
+      .expect(400);
+  });
+  
+  test('should validate redirect URI strictly', async () => {
+    const client = await createTestClient({
+      redirectUris: ['https://app.company.com/callback']
+    });
+    
+    // 尝试使用未注册的重定向URI
+    await request(app)
+      .get('/api/oauth/authorize')
+      .query({
+        response_type: 'code',
+        client_id: client.clientId,
+        redirect_uri: 'https://evil.com/callback', // 恶意重定向
+        scope: 'openid profile'
+      })
+      .expect(400);
+  });
+  
+  test('should prevent timing attacks on client authentication', async () => {
+    const validClient = await createTestClient();
+    const timings = [];
+    
+    // 测试有效客户端认证时间
+    for (let i = 0; i < 10; i++) {
+      const start = process.hrtime.bigint();
+      await authenticateClient(validClient.clientId, validClient.clientSecret);
+      const end = process.hrtime.bigint();
+      timings.push(Number(end - start) / 1000000); // 转换为毫秒
+    }
+    
+    // 测试无效客户端认证时间
+    const invalidTimings = [];
+    for (let i = 0; i < 10; i++) {
+      const start = process.hrtime.bigint();
+      try {
+        await authenticateClient('invalid_client', 'invalid_secret');
+      } catch (e) {
+        // 预期的错误
+      }
+      const end = process.hrtime.bigint();
+      invalidTimings.push(Number(end - start) / 1000000);
+    }
+    
+    // 验证时间差异不应该太大（防止时序攻击）
+    const avgValid = timings.reduce((a, b) => a + b) / timings.length;
+    const avgInvalid = invalidTimings.reduce((a, b) => a + b) / invalidTimings.length;
+    const timeDifference = Math.abs(avgValid - avgInvalid);
+    
+    expect(timeDifference).toBeLessThan(10); // 时间差异应小于10ms
+  });
+});
+```
+
+#### 3.4.2 输入验证安全测试
+
+```javascript
+// 输入验证安全测试
+describe('Input Validation Security Tests', () => {
+  test('should prevent SQL injection in user queries', async () => {
+    const maliciousInput = "'; DROP TABLE users; --";
+    
+    await expect(findUserByUsername(maliciousInput))
+      .rejects.toThrow(); // 应该抛出验证错误，而不是执行SQL
+  });
+  
+  test('should prevent XSS in client metadata', async () => {
+    const xssPayload = '<script>alert("xss")</script>';
+    
+    await expect(createOAuthClient({
+      clientName: xssPayload,
+      clientUri: 'https://example.com'
+    })).rejects.toThrow('Invalid client name');
+  });
+  
+  test('should validate JWT claims properly', async () => {
+    const maliciousToken = {
+      sub: '../../../etc/passwd', // 路径遍历尝试
+      iss: 'https://evil.com',
+      aud: 'test_client'
+    };
+    
+    await expect(validateJWTClaims(maliciousToken))
+      .rejects.toThrow('Invalid subject claim');
+  });
+});
+```
+
+### 3.5 CI/CD集成测试
+
+#### 3.5.1 GitHub Actions测试流水线
+
+```yaml
+# .github/workflows/test.yml
+name: OAuth2.1 Test Suite
+
+on:
+  push:
+    branches: [ main, develop ]
+  pull_request:
+    branches: [ main ]
+
+jobs:
+  unit-tests:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+          cache: 'npm'
+      
+      - name: Install dependencies
+        run: npm ci
+      
+      - name: Run unit tests
+        run: npm run test:unit
+        env:
+          NODE_ENV: test
+      
+      - name: Upload coverage reports
+        uses: codecov/codecov-action@v3
+        with:
+          file: ./coverage/lcov.info
+  
+  integration-tests:
+    runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:15
+        env:
+          POSTGRES_PASSWORD: test
+          POSTGRES_DB: oauth_test
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+    
+    steps:
+      - uses: actions/checkout@v3
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+          cache: 'npm'
+      
+      - name: Install dependencies
+        run: npm ci
+      
+      - name: Run database migrations
+        run: npm run db:migrate
+        env:
+          DATABASE_URL: postgresql://postgres:test@localhost:5432/oauth_test
+      
+      - name: Run integration tests
+        run: npm run test:integration
+        env:
+          NODE_ENV: test
+          DATABASE_URL: postgresql://postgres:test@localhost:5432/oauth_test
+  
+  security-tests:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      
+      - name: Run security audit
+        run: npm audit --audit-level high
+      
+      - name: Run OWASP dependency check
+        uses: dependency-check/Dependency-Check_Action@main
+        with:
+          project: 'OAuth2.1-Auth-Center'
+          path: '.'
+          format: 'HTML'
+      
+      - name: Upload security report
+        uses: actions/upload-artifact@v3
+        with:
+          name: security-report
+          path: reports/
+  
+  performance-tests:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    steps:
+      - uses: actions/checkout@v3
+      
+      - name: Setup K6
+        run: |
+          sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys C5AD17C747E3415A3642D57D77C6C491D6AC1D69
+          echo "deb https://dl.k6.io/deb stable main" | sudo tee /etc/apt/sources.list.d/k6.list
+          sudo apt-get update
+          sudo apt-get install k6
+      
+      - name: Run performance tests
+        run: k6 run tests/performance/oauth-load-test.js
+        env:
+          BASE_URL: ${{ secrets.STAGING_URL }}
+          CLIENT_CREDENTIALS: ${{ secrets.TEST_CLIENT_CREDENTIALS }}
+```
+
+#### 3.5.2 测试报告和质量门禁
+
+```javascript
+// jest.config.js - 测试覆盖率配置
+module.exports = {
+  collectCoverage: true,
+  coverageDirectory: 'coverage',
+  coverageReporters: ['text', 'lcov', 'html'],
+  coverageThreshold: {
+    global: {
+      branches: 80,
+      functions: 80,
+      lines: 80,
+      statements: 80
+    },
+    './src/oauth/': {
+      branches: 90,
+      functions: 90,
+      lines: 90,
+      statements: 90
+    }
+  },
+  testMatch: [
+    '**/__tests__/**/*.(test|spec).(js|ts)',
+    '**/*.(test|spec).(js|ts)'
+  ],
+  setupFilesAfterEnv: ['<rootDir>/tests/setup.js']
+};
+```
 
 ## 3. OAuth2.1核心流程测试
 
