--- a/docs/权限体系设计文档.md
+++ b/docs/权限体系设计文档.md
@@ -1,5 +1,28 @@
 # OAuth2.1认证授权中心权限体系设计文档
 
+> **文档版本**: v2.0.0  
+> **创建日期**: 2024-01-20  
+> **最后更新**: 2024-01-20  
+> **文档状态**: 正式版  
+> **维护团队**: 架构团队
+
+## 文档摘要
+
+本文档详细描述了OAuth2.1认证授权中心的权限体系设计，包括RBAC权限模型、菜单权限、API权限、数据权限和操作权限的设计方案。确保系统具备企业级的细粒度权限控制能力。
+
+## 目录
+
+- [1. 权限体系概述](#1-权限体系概述)
+  - [1.1 权限模型](#11-权限模型)
+  - [1.2 权限层级](#12-权限层级)
+- [2. 管理页面菜单权限设计](#2-管理页面菜单权限设计)
+- [3. API权限设计](#3-api权限设计)
+- [4. 数据权限设计](#4-数据权限设计)
+- [5. 操作权限设计](#5-操作权限设计)
+- [6. 权限检查机制](#6-权限检查机制)
+- [7. 权限缓存策略](#7-权限缓存策略)
+- [8. 权限审计](#8-权限审计)
+
 ## 1. 权限体系概述
 
 ### 1.1 权限模型
