fix: refactor docs

--- a/docs/代码升级方案.md
+++ b/docs/代码升级方案.md
@@ -419,7 +419,8 @@ export const config = configSchema.parse(process.env);
 
 ```sql
 -- 用户表索引优化
-CREATE INDEX CONCURRENTLY idx_users_email ON users(email);
+-- 移除邮箱相关索引，专注内网用户名认证
+-- CREATE INDEX CONCURRENTLY idx_users_email ON users(email);
 CREATE INDEX CONCURRENTLY idx_users_status ON users(status);
 CREATE INDEX CONCURRENTLY idx_users_created_at ON users(created_at);
 
@@ -428,8 +429,9 @@ CREATE INDEX CONCURRENTLY idx_user_roles_user_role
 ON user_roles(user_id, role_id);
 
 -- 部分索引
-CREATE INDEX CONCURRENTLY idx_users_active_email 
-ON users(email) WHERE status = 'ACTIVE';
+-- 移除邮箱相关索引，专注内网环境
+-- CREATE INDEX CONCURRENTLY idx_users_active_email 
+-- ON users(email) WHERE status = 'ACTIVE';
 ```
 
 **查询优化**:
@@ -560,10 +562,16 @@ class BatchProcessor {
 ```typescript
 // 严格的输入验证
 const userCreateSchema = z.object({
-  email: z.string()
-    .email('Invalid email format')
-    .max(255, 'Email too long')
-    .transform(email => email.toLowerCase().trim()),
+  // 移除邮箱验证，专注内网环境
+  // email: z.string()
+  //   .email('Invalid email format')
+  //   .max(255, 'Email too long')
+  //   .transform(email => email.toLowerCase().trim()),
+  
+  username: z.string()
+    .min(3, 'Username must be at least 3 characters')
+    .max(50, 'Username too long')
+    .regex(/^[a-zA-Z0-9_]+$/, 'Username can only contain letters, numbers and underscores'),
   
   password: z.string()
     .min(8, 'Password must be at least 8 characters')
@@ -664,13 +672,13 @@ describe('AuthService', () => {
   describe('login', () => {
     it('should return token for valid credentials', async () => {
       // Arrange
-      const email = 'test@example.com';
-      const password = 'password123';
-      const user = createMockUser({ email });
-      mockUserRepository.findByEmail.mockResolvedValue(user);
+      const username = 'testuser';
+    const password = 'password123';
+    const user = createMockUser({ username });
+    mockUserRepository.findByUsername.mockResolvedValue(user);
 
       // Act
-      const result = await authService.login(email, password);
+      const result = await authService.login(username, password);
 
       // Assert
       expect(result).toHaveProperty('accessToken');
@@ -679,11 +687,11 @@ describe('AuthService', () => {
 
     it('should throw error for invalid credentials', async () => {
       // Arrange
-      mockUserRepository.findByEmail.mockResolvedValue(null);
+      mockUserRepository.findByUsername.mockResolvedValue(null);
 
       // Act & Assert
       await expect(
-        authService.login('invalid@example.com', 'password')
+        authService.login('invaliduser', 'password')
       ).rejects.toThrow('Invalid credentials');
     });
   });
@@ -718,7 +726,7 @@ describe('Auth API Integration', () => {
       const response = await request(app)
         .post('/api/auth/login')
         .send({
-          email: user.email,
+          username: user.username,
           password: 'password123'
         });
 
