--- a/docs/权限体系设计文档.md
+++ b/docs/权限体系设计文档.md
@@ -986,8 +986,8 @@ INSERT INTO RolePermission (roleId, permissionId) VALUES
 
 ```sql
 -- 创建默认系统管理员
-INSERT INTO User (id, username, email, passwordHash, isActive, mustChangePassword) VALUES 
-('admin-001', 'admin', 'admin@company.com', '$2b$10$hashedpassword', true, true);
+INSERT INTO User (id, username, firstName, lastName, organization, department, passwordHash, isActive, mustChangePassword) VALUES 
+('admin-001', 'admin', 'System', 'Admin', 'IT Department', 'Security', '$2b$10$hashedpassword', true, true);
 
 -- 分配系统管理员角色
 INSERT INTO UserRole (userId, roleId, assignedAt) VALUES 
