--- a/docs/测试设计方案.md
+++ b/docs/测试设计方案.md
@@ -767,7 +767,7 @@ describe('OAuth2.1 Authorization Code Flow', () => {
       client_id: 'test-client',
       redirect_uri: 'https://client.example.com/callback',
       response_type: 'code',
-      scope: 'openid profile email',
+      scope: 'openid profile api:read',
       state: 'random-state-value'
     });
     
@@ -781,7 +781,7 @@ describe('OAuth2.1 Authorization Code Flow', () => {
     const authCode = await authorizeClient({
       client_id: 'test-client',
       user_id: authResponse.user_id,
-      scope: 'openid profile email'
+      scope: 'openid profile api:read'
     });
     
     // 4. 交换访问令牌
@@ -799,7 +799,7 @@ describe('OAuth2.1 Authorization Code Flow', () => {
       token_type: 'Bearer',
       expires_in: expect.any(Number),
       refresh_token: expect.any(String),
-      scope: 'openid profile email'
+      scope: 'openid profile api:read'
     });
   });
 });
@@ -993,7 +993,7 @@ describe('Token Revocation', () => {
 ```typescript
 describe('OpenID Connect ID Token', () => {
   test('should return valid ID token with openid scope', async () => {
-    const tokenResponse = await getTokensWithScope('openid profile email');
+    const tokenResponse = await getTokensWithScope('openid profile api:read');
     
     // 验证ID token存在
     expect(tokenResponse.id_token).toBeDefined();
@@ -1026,7 +1026,7 @@ describe('OpenID Connect ID Token', () => {
   });
   
   test('should include user claims based on scope', async () => {
-    const tokenResponse = await getTokensWithScope('openid profile email');
+    const tokenResponse = await getTokensWithScope('openid profile');
     const idToken = jwt.decode(tokenResponse.id_token);
     
     // 验证profile scope的声明
@@ -1037,11 +1037,7 @@ describe('OpenID Connect ID Token', () => {
       picture: expect.any(String)
     });
     
-    // 验证email scope的声明
-    expect(idToken).toMatchObject({
-      email: expect.stringMatching(/^[^\s@]+@[^\s@]+\.[^\s@]+$/),
-      email_verified: expect.any(Boolean)
-    });
+    // 内网环境无需邮箱验证
   });
 });
 ```
@@ -1053,7 +1049,7 @@ describe('OpenID Connect ID Token', () => {
 ```typescript
 describe('OIDC UserInfo Endpoint', () => {
   test('should return user information with valid access token', async () => {
-    const tokens = await getTokensWithScope('openid profile email');
+    const tokens = await getTokensWithScope('openid profile api:read');
     
     const userInfoResponse = await fetch('/api/v2/oidc/userinfo', {
       headers: {
@@ -1067,8 +1063,8 @@ describe('OIDC UserInfo Endpoint', () => {
     expect(userInfo).toMatchObject({
       sub: expect.any(String),
       name: expect.any(String),
-      email: expect.any(String),
-      email_verified: expect.any(Boolean)
+      organization: expect.any(String),
+      department: expect.any(String)
     });
   });
   
@@ -1087,8 +1083,8 @@ describe('OIDC UserInfo Endpoint', () => {
     // 应该包含profile信息
     expect(userInfo.name).toBeDefined();
     
-    // 不应该包含email信息
-    expect(userInfo.email).toBeUndefined();
+    // 不应该包含API权限信息
+    expect(userInfo.api_permissions).toBeUndefined();
   });
 });
 ```
@@ -1113,7 +1109,7 @@ describe('OIDC Discovery', () => {
       response_types_supported: expect.arrayContaining(['code']),
       subject_types_supported: expect.arrayContaining(['public']),
       id_token_signing_alg_values_supported: expect.arrayContaining(['RS256']),
-      scopes_supported: expect.arrayContaining(['openid', 'profile', 'email']),
+      scopes_supported: expect.arrayContaining(['openid', 'profile', 'api:read', 'api:write']),
       token_endpoint_auth_methods_supported: expect.arrayContaining(['client_secret_basic', 'client_secret_post']),
       code_challenge_methods_supported: expect.arrayContaining(['S256'])
     });
@@ -1267,9 +1263,9 @@ describe('Data-Level Permissions', () => {
     expect(user.id).toBeDefined();
     expect(user.name).toBeDefined();
     
-    // 不应该包含敏感字段
-    expect(user.email).toBeUndefined();
-    expect(user.phone).toBeUndefined();
+    // 应该包含内网环境字段
+    expect(user.organization).toBeDefined();
+    expect(user.department).toBeDefined();
   });
 });
 ```
@@ -1375,7 +1371,8 @@ describe('Input Validation Security', () => {
       },
       body: JSON.stringify({
         name: xssPayload,
-        email: 'test@example.com'
+        organization: 'test-org',
+        department: 'test-dept'
       })
     });
     
@@ -1596,7 +1593,7 @@ describe('Resource Usage Testing', () => {
       await generateAccessToken({
         user_id: `user-${i}`,
         client_id: 'test-client',
-        scope: 'openid profile email'
+        scope: 'openid profile api:read'
       });
       
       // 每100次检查一次内存
@@ -1634,7 +1631,7 @@ describe('OAuth Client Compatibility', () => {
       
       // 测试授权码流程
       const authUrl = client.getAuthorizationUrl({
-        scope: 'openid profile email',
+        scope: 'openid profile api:read',
         state: 'test-state'
       });
       
@@ -1729,7 +1726,10 @@ describe('End-to-End User Flows', () => {
     // 3. 创建新用户
     await page.click('[data-testid="create-user-button"]');
     await page.fill('[name="username"]', 'newuser');
-    await page.fill('[name="email"]', 'newuser@example.com');
+    await page.fill('[name="firstName"]', 'New');
+    await page.fill('[name="lastName"]', 'User');
+    await page.fill('[name="organization"]', 'test-org');
+    await page.fill('[name="department"]', 'test-dept');
     await page.fill('[name="password"]', 'password123');
     await page.selectOption('[name="role"]', 'user');
     await page.click('[type="submit"]');
@@ -1800,9 +1800,12 @@ export class TestDataFactory {
     return {
       id: faker.datatype.uuid(),
       username: faker.internet.userName(),
-      email: faker.internet.email(),
+      firstName: faker.name.firstName(),
+      lastName: faker.name.lastName(),
+      organization: faker.company.name(),
+      department: faker.commerce.department(),
       password: bcrypt.hashSync('password123', 10),
-      name: faker.name.fullName(),
+      displayName: faker.name.fullName(),
       status: 'active',
       createdAt: new Date(),
       updatedAt: new Date(),
@@ -1829,7 +1832,7 @@ export class TestDataFactory {
       clientSecret: faker.random.alphaNumeric(32),
       name: faker.company.name(),
       redirectUris: [faker.internet.url()],
-      scopes: ['openid', 'profile', 'email'],
+      scopes: ['openid', 'profile'],
       grantTypes: ['authorization_code', 'refresh_token'],
       responseTypes: ['code'],
       tokenEndpointAuthMethod: 'client_secret_basic',
